examples/avm-res-storage-storageaccount/0.7.1/submodules/share/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
<!-- BEGIN\_TF\_DOCS -->
# Internal submodule: share

This is an internal submodule used by `terraform-azurerm-avm-res-storage-storageaccount`. Consumers MUST NOT call this submodule directly. Refer to the root module for supported inputs.

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (>= 1.10.0)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.8)

## Resources

The following resources are used by this module:

- [azapi_resource.this](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_name"></a> [name](#input\_name)

Description: (Required) The name of the file share.

Type: `string`

### <a name="input_quota"></a> [quota](#input\_quota)

Description: (Required) The maximum size of the share, in gigabytes.

Type: `number`

### <a name="input_storage_account_id"></a> [storage\_account\_id](#input\_storage\_account\_id)

Description: (Required) The full resource ID of the parent storage account.

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_access_tier"></a> [access\_tier](#input\_access\_tier)

Description: (Optional) The access tier of the file share. Possible values are `Hot`, `Cool`, `TransactionOptimized`, `Premium`. Defaults to `null` (the platform applies its default for the storage account kind).

Type: `string`

Default: `null`

### <a name="input_enabled_protocol"></a> [enabled\_protocol](#input\_enabled\_protocol)

Description: (Optional) The protocol used for the share. Possible values are `SMB` and `NFS`. Defaults to `null` (`SMB`).

Type: `string`

Default: `null`

### <a name="input_metadata"></a> [metadata](#input\_metadata)

Description: (Optional) Metadata for the share. Defaults to `null` (no metadata).

Type: `map(string)`

Default: `null`

### <a name="input_resource_type"></a> [resource\_type](#input\_resource\_type)

Description: (Optional) Override the AzAPI `<provider>/<resource>@<api-version>` string used to manage the file share. Defaults to the value tested with this module version.

Type: `string`

Default: `"Microsoft.Storage/storageAccounts/fileServices/shares@2025-06-01"`

### <a name="input_retry"></a> [retry](#input\_retry)

Description: (Optional) Retry configuration applied to AzAPI resources managed by this module. Defaults to `null` (no custom retry).

- `error_message_regex` - (Optional) A list of regex patterns matching error messages that trigger a retry. Defaults to `null`.
- `interval_seconds` - (Optional) Initial interval between retries in seconds. Defaults to `null` (provider default).
- `max_interval_seconds` - (Optional) Maximum interval between retries in seconds. Defaults to `null` (provider default).

Type:

```hcl
object({
    error_message_regex  = optional(list(string))
    interval_seconds     = optional(number)
    max_interval_seconds = optional(number)
  })
```

Default: `null`

### <a name="input_role_assignment_definition_lookup_enabled"></a> [role\_assignment\_definition\_lookup\_enabled](#input\_role\_assignment\_definition\_lookup\_enabled)

Description: (Optional) Whether the `role_assignments` submodule should resolve role definition names supplied via `role_definition_id_or_name` by querying the Azure Authorization API. Defaults to `true`. See the `role_assignments` submodule for details.

Type: `bool`

Default: `true`

### <a name="input_role_assignments"></a> [role\_assignments](#input\_role\_assignments)

Description: (Optional) A map of role assignments to create at the share scope. Defaults to `{}`. See the `role_assignments` submodule for the attribute schema.

Type:

```hcl
map(object({
    role_definition_id_or_name             = string
    principal_id                           = string
    description                            = optional(string, null)
    skip_service_principal_aad_check       = optional(bool, false)
    condition                              = optional(string, null)
    condition_version                      = optional(string, null)
    delegated_managed_identity_resource_id = optional(string, null)
    principal_type                         = optional(string, null)
  }))
```

Default: `{}`

### <a name="input_root_squash"></a> [root\_squash](#input\_root\_squash)

Description: (Optional) The root squash behaviour for an NFS share. Possible values are `NoRootSquash`, `RootSquash`, `AllSquash`. Defaults to `null` (only valid when `enabled_protocol` is `NFS`).

Type: `string`

Default: `null`

### <a name="input_signed_identifiers"></a> [signed\_identifiers](#input\_signed\_identifiers)

Description: (Optional) Signed identifiers / stored access policies for the share. Defaults to `null` (no signed identifiers). A maximum of 5 signed identifiers may be defined. Each entry supports:

- `id` - (Required) The ID for this signed identifier (1-64 characters).
- `access_policy` - (Optional) The access policy for this signed identifier. Defaults to `null`. Supports:
  - `expiry_time` - (Required) The ISO-8601 UTC time at which the access policy expires.
  - `permission` - (Required) The permissions granted by the access policy. Possible values include any combination of `r` (read), `w` (write), `d` (delete), `l` (list), `c` (create).
  - `start_time` - (Required) The ISO-8601 UTC time at which the access policy becomes valid.

Type:

```hcl
list(object({
    id = string
    access_policy = optional(object({
      expiry_time = string
      permission  = string
      start_time  = string
    }))
  }))
```

Default: `null`

### <a name="input_timeouts"></a> [timeouts](#input\_timeouts)

Description: (Optional) Per-operation timeouts applied to AzAPI resources managed by this module. Defaults to `null` (provider defaults). Each value is a Go duration string (e.g. `30m`, `1h`).

- `create` - (Optional) Timeout for create operations. Defaults to `null`.
- `read` - (Optional) Timeout for read operations. Defaults to `null`.
- `update` - (Optional) Timeout for update operations. Defaults to `null`.
- `delete` - (Optional) Timeout for delete operations. Defaults to `null`.

Type:

```hcl
object({
    create = optional(string)
    read   = optional(string)
    update = optional(string)
    delete = optional(string)
  })
```

Default: `null`

### <a name="input_tracing_tags_header"></a> [tracing\_tags\_header](#input\_tracing\_tags\_header)

Description: (Optional) User-Agent string injected into AzAPI request headers. Defaults to `null` (no custom header).

Type: `string`

Default: `null`

## Outputs

The following outputs are exported:

### <a name="output_name"></a> [name](#output\_name)

Description: The name of the file share.

### <a name="output_resource"></a> [resource](#output\_resource)

Description: The full share azapi\_resource.

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The resource ID of the file share.

### <a name="output_role_assignments"></a> [role\_assignments](#output\_role\_assignments)

Description: Map of role assignment resources created at the share scope, keyed by the input map key.

## Modules

The following Modules are called:

### <a name="module_role_assignments"></a> [role\_assignments](#module\_role\_assignments)

Source: ../role_assignments

Version:

<!-- END\_TF\_DOCS -->
<!-- END_TF_DOCS -->
